fix bugs on mobile

--- a/src/styles/Birthday.module.css
+++ b/src/styles/Birthday.module.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top:10vh ;
+    margin:10vh 0;
     overflow: hidden;
     box-shadow: 0 0 15px var(--purple) ,0 0 15px var(--white);
 }
