--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,12 +18,12 @@ body{
 /* ===================================scroll bar =============== */
 /* width */
 ::-webkit-scrollbar {
-    width: 1rem;
+    width: .7rem;
   }
   
   /* Track */
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+    box-shadow: inset 0 0 1px grey; 
   }
    
   /* Handle */
